syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "tools/ext.proto";
import "google/protobuf/timestamp.proto";

package storage;

// Next Tag: 7
message Blob {
    string name                              = 1 [(tools.moretags) = 'sql:"pk" search:"Blob Name"'];
    uint32 oid                               = 2;
    string checksum                          = 3;
    int64  length                            = 4 [(tools.moretags) = 'search:"Blob Length"'];
    google.protobuf.Timestamp last_updated   = 5;
    google.protobuf.Timestamp modified_time  = 6 [(tools.moretags) = 'search:"Blob Modified On"'];
}
