syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "google/protobuf/timestamp.proto";
import "tools/ext.proto";

package storage;


// Any properties of an individual service account.
// (regardless of time, scope, or context)
//////////////////////////////////////////
message ServiceAccount {
    string              id                  = 1 [(tools.moretags) = 'sql:"pk,type(uuid)"'];
    string              name                = 2 [(tools.moretags) = 'search:"Service Account,store"'];
    string              namespace           = 3 [(tools.moretags) = 'search:"Namespace,store"'];
    string              cluster_name        = 4 [(tools.moretags) = 'search:"Cluster,store"'];
    string              cluster_id          = 5 [(tools.moretags) = 'search:"Cluster ID,store,hidden" sql:"type(uuid)"'];
    map<string, string> labels              = 6 [(tools.moretags) = 'search:"Service Account Label"'];
    map<string, string> annotations         = 7 [(tools.moretags) = 'search:"Service Account Annotation"'];
    google.protobuf.Timestamp created_at    = 8;
    bool                automount_token     = 9;

    repeated string secrets                 = 10;
    repeated string image_pull_secrets      = 11;
}
